--- a/TuconMom.html
+++ b/TuconMom.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
               <th>Chihuahua</th><td>El chihuahua, ​ también conocido como chihuahueño, ​ es una raza de perro originaria de México, una de las razas de perros más antiguas del continente americano, además de ser el perro más pequeño del mundo.
-                 El chihuahua es originario del estado de Chihuahua.</td><td><img src="C:\Users\chris\OneDrive\Desktop\Programacion\Mascota\chihuahua.jpg" alt="" height="100" width="100"></td>
+                 El chihuahua es originario del estado de Chihuahua.</td><td><img src="https://github.com/christopherromeo/Mascota/blob/main/chihuahua.jpg?raw=trueg" alt="" height="100" width="100"></td>
             </tr>
         
           </table></center>
