--- a/TuconMom.html
+++ b/TuconMom.html
@@ -28,7 +28,7 @@
             </tr>
             <tr>
               <th>Bulldog</th><td>El bulldog, ​ también conocido como bulldog inglés, es una raza de perro originaria de Inglaterra. Su ancestro, conocido como el Antiguo Bulldog Inglés, fue utilizado en peleas de perros con toros hasta mediados del 
-                siglo XVII, aunque en 1835 esta práctica fue prohibida.</td><td><img src="bull.jpg" alt="" height="100" width="100"></td>
+                siglo XVII, aunque en 1835 esta práctica fue prohibida.</td><td><img src="C:\Users\chris\OneDrive\Desktop\Programacion\Mascota\bull.jpg" alt="" height="100" width="100"></td>
             </tr>
             <tr>
               <th>Husky siberiano</th><td>Ek Husky es un perro de tamaño mediano cuyas proporciones insinúan un equilibrio perfecto entre potencia, velocidad y resistencia. Con su pelaje de doble manto y longitud media, sus orejas erguidas y su cola tipo cepillo, esta raza puede presentar colores y manchas muy diversas, incluyendo el blanco, con algunos ejemplares de colorido notable. Los machos adultos miden entre 53 y 60 cm y las hembras, entre 51 y 56 cm. 
@@ -40,7 +40,7 @@
             </tr>
             <tr>
               <th>Chihuahua</th><td>El chihuahua, ​ también conocido como chihuahueño, ​ es una raza de perro originaria de México, una de las razas de perros más antiguas del continente americano, además de ser el perro más pequeño del mundo.
-                 El chihuahua es originario del estado de Chihuahua.</td><td><img src="https://github.com/christopherromeo/Mascota/blob/main/chihuahua.jpg?raw=trueg" alt="" height="100" width="100"></td>
+                 El chihuahua es originario del estado de Chihuahua.</td><td><img src="C:\Users\chris\OneDrive\Desktop\Programacion\Mascota\chihuahua.jpg" alt="" height="100" width="100"></td>
             </tr>
         
           </table></center>
